<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/recipe_detail_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_recipe_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/recipe_detail_prep_time"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/recipe_detail_subtitle_ingredients_required"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/general_none"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/recipe_detail_subtitle_cooking_instructions"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_none"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/recipe_detail_remove_ingredients_message"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_remove_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_button_remove" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_recipe"
                style="?attr/materialIconButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/white"
                app:strokeColor="@color/accent_blue"
                android:text="@string/recipe_detail_button_edit" />

            <View
                android:layout_width="5dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_recipe"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/recipe_detail_button_delete"
                android:textColor="@android:color/holo_red_dark"
                app:strokeColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
